fix code background color in dark mode and fix toc width

--- a/packages/theme/components/layout/table-of-contents/TableOfContents.module.css
+++ b/packages/theme/components/layout/table-of-contents/TableOfContents.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   position: sticky;
   top: var(--base-size-112);
+  width: 220px;
 }
 
 .heading {
